# cf_audit

./: .dockerignore  .gitconfig  .gitignore  .gitlab-ci.yml  README.md  cf_audit.py  config.py  config.toml  migrate.py  pyproject.toml  run.py  update_features.py
docker/: .env-dist  Dockerfile  docker-compose.yml
profiles/: README.md  TEMPLATE.py  amenity_charging_station_ich_tanke_strom_ch.py  filter.py  filtered_gipfel.json  filtered_paesse.json  gruen_stadt_zuerich_baenke.py  hoflaeden_ch.py  ladestellen_elektromobilitaet_example.py  pharmacy_coop_vitality_ch.py  police_zurich_ch.py  preview_gipfel.json  preview_paesse.json  results.osm  schweizer_berggipfel.py  schweizer_bergpaesse.py  schweizer_bergpässe.py  shop_doityourself_jumbo_ch.py  shop_electronics_fust_ch.py  shop_supermarket_aldi_sud_ch.py  toilet_zurich_ch.py  winterthurer_baenke.py  winterthurer_spielplaetze.py
profiles/geojson/: winterthurer_spielplaetze.geojson
profiles/scripts/: xml_parser.py
www/: __init__.py  audit.py  csv_operations.py  db.py  extended_migrator.py  stats_operations.py  util.py
www/static/: Bing.js  StreetViewButtons.js  audit.js  profile.js  style.css
www/templates/: browse.html  error.html  index.html  layout.html  map.html  newproject.html  profile.html  project.html  table.html  task.html
